--- a/eCharts/beijing/portal/index.html
+++ b/eCharts/beijing/portal/index.html
@@ -37,7 +37,7 @@
 		var hei = $('.iframe1').height();
 		var iframeHei = ((domHei-hei-67)/2)-32;
 		$('.iframeItem').css('height',iframeHei+'px')
-        $('.iframeGis').css('height',domHei-45+'px')
+        $('.iframeGis').css('height',$(".content").height())
 
 	})
 </script>
