--- a/eCharts/beijing/portal/lpchart.html
+++ b/eCharts/beijing/portal/lpchart.html
@@ -8,10 +8,10 @@
 </head>
 <link rel="stylesheet" type="text/css" href="../css/system.css">
 <body>
-<div class='result-con'>
+<div class='result-con' id="lpmain">
     <p class='title'>现场指纹采集情况 <span class='line'></span></p>
-    <p class='time'><span class='active'>日</span><span>月</span><span>年</span></p>
-    <div id="main" style="width:100%;height:100%;margin-top: -30px"></div>
+    <p class='time'><span name='day' class='active'>日</span><span name='month'>月</span><span name='year'>年</span></p>
+    <div id="chart" style="width:100%;height:100%;margin-top: -45px"></div>
 </div>
 
 </body>
@@ -19,6 +19,6 @@
 <script src="../js/echarts.min.js"></script>
 <script src="../js/theme.js"></script>
 <script src="../js/data.js"></script>
-<script src="../js/echart_lp.js"></script>
+<script src="js/echart_lp.js"></script>
 
 </html>
