--- a/eCharts/beijing/portal/tpchart.html
+++ b/eCharts/beijing/portal/tpchart.html
@@ -9,16 +9,16 @@
 <link rel="stylesheet" type="text/css" href="../css/system.css">
 
 <body>
-<div class='result-con'>
+<div class='result-con' id="tpmain">
     <p class='title'>档案数据采集排行<span class='line'></span></p>
-    <p class='time'><span class='active'>日</span><span>月</span><span>年</span></p>
-    <div id="tpmain" style="width:100%;height:100%;margin-top: -45px"></div>
+    <p class='time'><span name='day' class='active'>日</span><span name='month'>月</span><span name='year'>年</span></p>
+    <div id="chart" style="width:100%;height:100%;margin-top: -45px"></div>
 </div>
 </body>
 <script src="../js/jquery-1.12.3.min.js"></script>
 <script src="../js/echarts.min.js"></script>
 <script src="../js/theme.js"></script>
 <script src="../js/data.js"></script>
-<script src="../js/echart_tp.js"></script>
+<script src="js/echart_tp.js"></script>
 
 </html>
