--- a/eCharts/beijing/portal/index.html
+++ b/eCharts/beijing/portal/index.html
@@ -36,8 +36,8 @@
 		var domHei = $(window).height();
 		var hei = $('.iframe1').height();
 		var iframeHei = ((domHei-hei-67)/2)-32;
-		$('.iframeItem').css('height',iframeHei+'px')
-        $('.iframeGis').css('height',$(".content").height())
+		$('.iframeItem').css('height',iframeHei+'px');
+        $('.iframeGis').css('height',$(".content").height());
 
 	})
 </script>
