--- a/form/config/config.html
+++ b/form/config/config.html
@@ -26,6 +26,18 @@
 <script type="text/javascript" src="js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="js/data.js"></script>
 <script type="text/javascript" src="js/formconfig.js"></script>
+<script type='text/javascript' src='../base/js/base/abiscode.js'></script>
 <link rel="stylesheet" href="css/zTreeStyle.css" type="text/css">
 <link rel="stylesheet" href="css/config.css" type="text/css">
+<script>
+    var formConfig = new FormConfig({
+        callback: {
+            ready: function () {
+                this.setObject(defaultPageConfig.TPCARD);
+            }
+        }
+    });
+
+
+</script>
 </html>
