--- a/form/config/config.html
+++ b/form/config/config.html
@@ -15,18 +15,22 @@
 </div>
 <div class="rightContent">
     <div class="tool">
-        <div class="toolBotton">预览</div><div class="toolBotton">撤销</div><div class="toolBotton">保存</div>
+        <div class="toolBotton" id="showEditPage">编辑页预览</div><div class="toolBotton" id="showDetailPage">详情页预览</div><div class="toolBotton">撤销</div><div class="toolBotton">保存</div>
     </div>
     <div class="content"></div>
 </div>
 
 </body>
+<script>
+    var AbisMessageResource={};
+</script>
 <script  type="text/javascript" src="js/jquery-1.12.3.min.js"></script>
 <script type="text/javascript" src="js/jquery.ztree.all-3.5.js"></script>
 <script type="text/javascript" src="js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="js/data.js"></script>
 <script type="text/javascript" src="js/formconfig.js"></script>
 <script type='text/javascript' src='../base/js/base/abiscode.js'></script>
+<script src="js/layer.js"></script>
 <link rel="stylesheet" href="css/zTreeStyle.css" type="text/css">
 <link rel="stylesheet" href="css/config.css" type="text/css">
 <script>
