--- a/form/editpage/tpcardtxtedit.html
+++ b/form/editpage/tpcardtxtedit.html
@@ -31,7 +31,7 @@
     </div>
     <div name='AddrInfo' style="display:none;" class="edit2">
         <div class="form"
-             setting="{'id':'personTextInfo_And_AddrInfo_And_AddressCode','showText':false,'inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|ADDRESS_CODE','relatid':'personTextInfo_And_AddrInfo_And_AddressDetaildiv','all':false}">
+             setting="{'id':'personTextInfo_And_AddrInfo_And_AddressCode','validate':{'isRequired':true},'showText':false,'inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|ADDRESS_CODE','relatid':'personTextInfo_And_AddrInfo_And_AddressDetaildiv','all':false}">
             <label>地址代码</label>
         </div>
         <div class="form"
@@ -39,7 +39,7 @@
             <label>详细地址</label>
         </div>
         <div class="form"
-             setting="{'id':'personTextInfo_And_AddrInfo_And_AddressType','inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|ADDRESS_TYPE'}">
+             setting="{'id':'personTextInfo_And_AddrInfo_And_AddressType','validate':{'isRequired':true},'inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|ADDRESS_TYPE'}">
             <label>地址类型</label>
         </div>
         <div class="form"
@@ -56,7 +56,7 @@
     </div>
     <div name='CommInfo' style="display:none;" class="edit2">
         <div class="form"
-             setting="{'id':'personTextInfo_And_CommInfo_And_CommType','inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|COMM_TYPE'}">
+             setting="{'id':'personTextInfo_And_CommInfo_And_CommType','validate':{'isRequired':true},'inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|COMM_TYPE'}">
             <label>号码类型</label>
         </div>
         <div class="form"
@@ -81,7 +81,7 @@
             <label>电话号码</label>
         </div>
         <div class="form"
-             setting="{'id':'personTextInfo_And_PhoneInfo_And_PhoneNumType','inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|PHONE_NUM_TYPE'}">
+             setting="{'id':'personTextInfo_And_PhoneInfo_And_PhoneNumType','validate':{'isRequired':true},'inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|PHONE_NUM_TYPE'}">
             <label>电话号码类型</label>
         </div>
     </div>
@@ -94,7 +94,7 @@
     </div>
     <div name='CertInfo' style="display:none;" class="edit2">
         <div class="form"
-             setting="{'id':'personTextInfo_And_CertInfo_And_CertType','inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|CERT_TYPE'}">
+             setting="{'id':'personTextInfo_And_CertInfo_And_CertType','validate':{'isRequired':true},'inputType':'0','columnName':'MIS_PERSON_TEXT_INFO|CERT_TYPE'}">
             <label>证件类型</label>
         </div>
         <div class="form"
