表单配置器

--- a/form/detailpage/tpcardinfo_check.html
+++ b/form/detailpage/tpcardinfo_check.html
@@ -7,6 +7,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>人员详细信息</title>
 		<link rel="stylesheet" href="../base/css/detail.css" type="text/css" />
+		<style>
+			.detail{
+				min-width: 400px;
+			}
+			.detail .detailform{
+				width: 90%;
+			}
+			.Sigle_Line_Div label{
+				width:33%!important;
+			}
+			.Sigle_Line_Div>div {
+				width: 66%!important;
+			}
+		</style>
 	</head>
 
 	<body>
