--- a/form/config/config.html
+++ b/form/config/config.html
@@ -15,11 +15,12 @@
 </div>
 <div class="rightContent">
     <div class="tool">
-        <div class="toolBotton" id="showEditPage">编辑页预览</div><div class="toolBotton" id="showDetailPage">详情页预览</div><div class="toolBotton">撤销</div><div class="toolBotton">保存</div>
     </div>
     <div class="content"></div>
 </div>
+<div style="display: none" id="showColumn">
 
+</div>
 </body>
 <script>
     var AbisMessageResource={};
@@ -31,8 +32,11 @@
 <script type="text/javascript" src="js/formconfig.js"></script>
 <script type='text/javascript' src='../base/js/base/abiscode.js'></script>
 <script src="js/layer.js"></script>
+<script type='text/javascript' src='../base/js/common/util/json2.js'></script>
 <link rel="stylesheet" href="css/zTreeStyle.css" type="text/css">
 <link rel="stylesheet" href="css/config.css" type="text/css">
+
+
 <script>
     var formConfig = new FormConfig({
         callback: {
