--- a/form/config/config.html
+++ b/form/config/config.html
@@ -31,6 +31,8 @@
 <script type="text/javascript" src="js/data.js"></script>
 <script type="text/javascript" src="js/formconfig.js"></script>
 <script type='text/javascript' src='../base/js/base/abiscode.js'></script>
+<script type='text/javascript' src='../base/js/data.js'></script>
+<script type='text/javascript' src='../base/js/common/util/webutil.js'></script>
 <script src="js/layer.js"></script>
 <script type='text/javascript' src='../base/js/common/util/json2.js'></script>
 <link rel="stylesheet" href="css/zTreeStyle.css" type="text/css">
