--- a/canvas/abis/unit/crop/图像截取demo2.html
+++ b/canvas/abis/unit/crop/图像截取demo2.html
@@ -14,36 +14,47 @@
         image = new fabric.Image(img);
         image.selectable = true;
         image.angle = 0;
-        canvas.setWidth(image.width);
-        canvas.setHeight(image.height);
+        canvas.setWidth($(document.documentElement).width());
+        canvas.setHeight($(document.documentElement).height());
         canvas.add(image);
-        canvas.centerObject(image);
+        //canvas.centerObject(image);
         canvas.renderAll();
     });
     var rectangle = new fabric.Rect({
-        // fill: 'transparent',
         stroke: '#ccc',
-        //strokeDashArray: [2, 2],
-        strokeWidth: 1,
-        fill: "rgba(255, 255, 255, 0)",
+        originX:'center',
+        originY:'center',
+        strokeWidth: 2,
+        fill: 'transparent',
         visible: true,
+        angle : 90,
         selectable : true,
-        width:800,
-        height:800
+        width:300,
+        height:150
     });
     canvas.add(rectangle);
+    canvas.renderAll();
     $('#cropB').on('click', function() {
         var imageAngle = image.angle;
         image.angle =image.angle-rectangle.angle;
+        var left,top;
+        if(rectangle.angle===0){
+            left=rectangle.left-image.left;
+            top=rectangle.top-image.top;
+        }else if(rectangle.angle===90){
+            left = rectangle.top-image.top;
+            top=image.width-(rectangle.left-image.left)
+        }
         var srcData = image.toDataURL({
             multiplier:0.5,
-            left: rectangle.left-image.left,
-            top: rectangle.top-image.top,
+            left: left,
+            top: top,
             width: rectangle.width,
             height: rectangle.height
         });
         image.angle = imageAngle;
-        $("#demoImage").attr("src",srcData)
+        $("#demoImage").attr("src",srcData);
+        canvas.renderAll();
     });
 
 </script>
