--- a/gis/abisgis/openlayers/Unit.html
+++ b/gis/abisgis/openlayers/Unit.html
@@ -114,7 +114,7 @@
 
     $.each(unitData,function(index,model){
         if(index>100){
-            return false;
+            //return false;
         }
         createPoint(Number(model.lon),Number(model.lat),model.unitName);
     })
