--- a/css/base/float/demo1.html
+++ b/css/base/float/demo1.html
@@ -2,16 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>float</title>
     <style>
-
-
+        img {
+            float: right;
+            margin: 0 0 1em 1em;
+            /*width: 50%;*/
+        }
+        .content {
+            max-width: 600px;
+            margin: 1em auto;
+        }
     </style>
 </head>
 <body>
-<div>
-
-
+<div class="content">
+        <img src="http://zh.learnlayout.com/images/ilta.png" alt="An Image">
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+        Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
 </div>
+
+<br><br>
+clearfix
+<br><br>
+<style>
+    .clearfix {
+        overflow: auto;
+    }
+    span{
+        font-size: larger;
+        font-weight: bold;
+    }
+
+</style>
+<div class="clearfix">
+    <img src="http://zh.learnlayout.com/images/ilta.png" alt="An Image">
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    <br><br>
+    <span>增加清除浮动 保证高度div与 img子元素 高度统一</span>
+</div>
+<div>
+    <img src="http://zh.learnlayout.com/images/ilta.png" alt="An Image">
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+    Float 最初设计是用于实现文字环绕图片，会让元素高度塌陷。
+</div>
+
 </body>
 </html>
