--- a/css/base/padding/demo1.html
+++ b/css/base/padding/demo1.html
@@ -2,19 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>padding</title>
     <style>
         div{
             background-color: #00c3f0;
-            padding: 50%;
+            padding: 30%;
+            width: 10%;
+            height: 10%;
+            border: 5px solid #424265;
         }
 
     </style>
 </head>
 <body>
 <div>
-
-
+    text
 </div>
 </body>
 </html>
