--- a/css/base/margin/demo1.html
+++ b/css/base/margin/demo1.html
@@ -2,16 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>margin</title>
     <style>
-
+        div{
+            background-color: #00c3f0;
+            margin: 30%;
+            width: 10%;
+            height: 10%;
+            border: 5px solid #424265;
+        }
 
     </style>
 </head>
 <body>
 <div>
-
-
+    text
 </div>
 </body>
 </html>
