--- a/设计模式/composite/demo.html
+++ b/设计模式/composite/demo.html
@@ -9,4 +9,63 @@
 它的宗旨是通过将单个对象（叶子节点）和组合对象（树枝节点）用相同的接口进行表示，
 使得客户对单个对象和组合对象的使用具有一致性，属于结构型设计模式。
 </body>
+
+
+<script type="text/javascript">
+    /******************************* Folder ******************************/
+    var Folder = function( name ){
+        this.name = name;
+        this.files = [];
+    };
+    Folder.prototype.add = function( ){
+        //转换成数据
+        var argumentsArray = Array.prototype.slice.call(arguments );
+        this.files =  this.files.concat(argumentsArray);
+    };
+    Folder.prototype.scan = function(){
+        console.log( '开始扫描文件夹: ' + this.name );
+        for ( var i = 0, file, files = this.files; file = files[ i++ ]; ){
+            file.scan();
+        }
+    };
+    /******************************* File ******************************/
+    var File = function( name ){
+        this.name = name;
+    };
+    File.prototype.add = function(){
+        throw new Error( '文件下面不能再添加文件' );
+    };
+    File.prototype.scan = function(){
+        console.log( '开始扫描文件: ' + this.name );
+    };
+
+    /**
+     * 初始化文件夹、文件
+     */
+    var folder
+    function init(){
+        var file1 = new File( 'JavaScript 设计模式与开发实践' );
+        var file2 = new File( 'JavaScript 语言精髓与编程实践' );
+        var file3 = new File( '重构与模式' )
+        var file4 = new File( '代码大全' )
+        var file5 = new File( 'Java并发编程的艺术' );
+        var file6 = new File( 'Effective Java' );
+        folder = new Folder( '学习资料' );
+        var folder1 = new Folder( '代码规范' );
+        var folder2 = new Folder ( 'JavaScript' );
+        var folder3 = new Folder ( 'JAVA' );
+        folder.add(folder1,folder2,folder3)
+        folder1.add(file1,file2)
+        folder2.add(file3,file4)
+        folder3.add(file5,file6)
+    }
+
+    init();
+    /**
+     * 组合模式使得我们只需要操作最外层的文件夹进行扫描。
+     * 例如 扫描杀毒、复制；； 文件夹、文件虽然有差异，但是此刻是一个整体，可以统一操作
+     */
+    folder.scan();
+
+</script>
 </html>
