--- a/eCharts/beijing/portal/index.html
+++ b/eCharts/beijing/portal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>北京市公安局指掌纹识别系统</title>
+    <title>x系统</title>
     <link rel="stylesheet" type="text/css" href="../css/system.css">
     <script type="text/javascript" src='../js/jquery-1.12.3.min.js'></script>
     <style type="text/css">
