--- a/vueTest/text_question/text_question.html
+++ b/vueTest/text_question/text_question.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>北京市公安局指掌纹编辑认定培训考核平台</title>
+	<title>指掌纹编辑认定培训考核平台</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/hisignfont/hisignfont_v3.css">
 	<link rel="stylesheet" href="css/common-blue-header.css">
