bootcdn不稳定，增加cdnjs

--- a/eCharts/mine/stat.html
+++ b/eCharts/mine/stat.html
@@ -5,6 +5,8 @@
     <title>ECharts统计示例</title>
     <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.5.0/echarts.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="js/dateinfo.js"></script>
     <script src="js/dateEcharts.js"></script>
     <script src="js/hourEcharts.js"></script>
