--- a/eCharts/mine/life/myself.html
+++ b/eCharts/mine/life/myself.html
@@ -2,8 +2,7 @@
 <html>
 <head lang="en-US">
     <meta charset="UTF-8">
-    <title>
-    </title>
+    <title>个人简介</title>
 
 </head>
 <style>
@@ -54,7 +53,7 @@
     <p>优点靠谱、身心健康，缺点外貌一般。</p>
     <ul>
         <li>生日：1989年10月</li>
-        <li>身高：166cm</li>
+        <li>身高：168cm</li>
         <li>体重：64kg</li>
         <li>职业：程序员</li>
         <li>年薪：30万</li>
