--- a/eCharts/mine/life/myself.html
+++ b/eCharts/mine/life/myself.html
@@ -55,6 +55,8 @@
         <li>生日：1989年10月</li>
         <li>身高：168cm</li>
         <li>体重：64kg</li>
+        <li>工作地：北京丰台</li>
+        <li>家乡：山东淄博</li>
         <li>职业：程序员</li>
         <li>年薪：30万</li>
         <li>存款：100万</li>
