--- a/eCharts/mine/life/myself.html
+++ b/eCharts/mine/life/myself.html
@@ -114,7 +114,7 @@
             type: 'radar',
             // areaStyle: {normal: {}},
             data: [{
-                value: [7, 6, 7, 8, 7, 9, 9],
+                value: [7, 6, 7, 9, 8, 9],
                 name: '基本信息',
                 areaStyle: {
                     color: new echarts.graphic.RadialGradient(0.1, 0.6, 1, [
