--- a/eCharts/mine/life/myself.html
+++ b/eCharts/mine/life/myself.html
@@ -50,7 +50,7 @@
 <div class="profile-summary">
     <h2>个人简介</h2>
     <p>爱生活、读书、跑步、美食。</p>
-    <p>优点靠谱、身心健康，缺点外貌一般。</p>
+    <p>优点：靠谱、身心健康，缺点：外貌一般。</p>
     <ul>
         <li>生日：1989年10月</li>
         <li>身高：168cm</li>
