--- a/eCharts/mine/life/myself.html
+++ b/eCharts/mine/life/myself.html
@@ -61,7 +61,7 @@
         <li>家乡：山东淄博</li>
         <li>职业：程序员</li>
         <li>年薪：30万</li>
-        <li>存款：100万</li>
+        <li>资产：无车无房、存款可付首付</li>
     </ul>
 </div>
 <script type="text/javascript">
