--- a/eCharts/mine/life/myself.html
+++ b/eCharts/mine/life/myself.html
@@ -61,7 +61,8 @@
         <li>家乡：山东淄博</li>
         <li>职业：程序员</li>
         <li>年薪：30万</li>
-        <li>资产：无车无房、存款可付首付</li>
+        <li>个人资产：无车无房、存款够付首付</li>
+        <li>家庭：独生子，父母退休有养老金，身体健康</li>
     </ul>
 </div>
 <script type="text/javascript">
