--- a/eCharts/mine/life/myself.html
+++ b/eCharts/mine/life/myself.html
@@ -45,7 +45,7 @@
     }
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+<script src="../js/confetti.browser.min.js"></script>
 
 <body style="height: 500px; margin: 0">
 <div id="main" style="height: 100%"></div>
