--- a/eCharts/mine/life/myself.html
+++ b/eCharts/mine/life/myself.html
@@ -22,12 +22,12 @@
         box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     }
     .profile-summary h2 {
-        font-size: 24px;
+        font-size: 32px;
         color: #56A3F1;
         margin-bottom: 15px;
     }
     .profile-summary p {
-        font-size: 16px;
+        font-size: 24px;
         line-height: 1.6;
         color: #666;
     }
@@ -36,7 +36,7 @@
         padding: 0;
     }
     .profile-summary li {
-        font-size: 16px;
+        font-size: 20px;
         color: #666;
         margin-bottom: 10px;
     }
@@ -51,9 +51,9 @@
 <div id="main" style="height: 100%"></div>
 <div class="profile-summary">
     <h2>个人简介</h2>
-    <p>爱生活、读书、跑步、美食。</p>
-    <p>优点：靠谱、身心健康、家庭和睦，缺点：外貌一般。</p>
+    <p>爱生活、读书、跑步、美食</p>
     <ul>
+        <li>优点：靠谱、身心健康、家庭和睦，缺点：外貌一般。</li>
         <li>生日：1989年10月</li>
         <li>身高：168cm</li>
         <li>体重：64kg</li>
