--- a/eCharts/mine/stat.html
+++ b/eCharts/mine/stat.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>日记统计</title>
-    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.5.0/echarts.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js"></script>-->
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>-->
+    <script src="js/echarts.min.js"></script>
+    <script src="js/moment.min.js"></script>
     <script src="js/dateinfo.js"></script>
     <script src="js/dateEcharts.js"></script>
     <script src="js/hourEcharts.js"></script>
